force-app/main/default/objects/Account/fields/Account_Plan_Required__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Plan Required?</label>
    <type>Checkbox</type>
</CustomField>