force-app/main/default/objects/Account/fields/Active_Headcount__c.field-meta.xml
<CustomField>
    <fullName>Active_Headcount__c</fullName>
    <label>Active Headcount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>