force-app/main/default/objects/Account/fields/Address_Concatenated__c.field-meta.xml
<CustomField>
    <fullName>Address_Concatenated__c</fullName>
    <formula>BillingStreet + &apos;, &apos; + BillingCity + &apos;, &apos; + BillingPostalCode + &apos;, &apos; + BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address (Concatenated)</label>
    <type>Text</type>
</CustomField>