force-app/main/default/objects/Account/fields/AML_CFT__c.field-meta.xml
<CustomField>
    <fullName>AML_CFT__c</fullName>
    <label>AML &amp; CFT</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>