force-app/main/default/objects/Account/fields/AML_CFT_Expiry__c.field-meta.xml
<CustomField>
    <fullName>AML_CFT_Expiry__c</fullName>
    <label>AML &amp; CFT Expiry</label>
    <type>Date</type>
</CustomField>