force-app/main/default/objects/Account/fields/AML_CFT_Sign__c.field-meta.xml
<CustomField>
    <fullName>AML_CFT_Sign__c</fullName>
    <label>AML &amp; CFT Sign</label>
    <type>Date</type>
</CustomField>