force-app/main/default/objects/Account/fields/Average_Risk_Score_No_Weighting__c.field-meta.xml
<CustomField>
    <fullName>Average_Risk_Score_No_Weighting__c</fullName>
    <label>Average Risk Score (No Weighting)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>