force-app/main/default/objects/Account/fields/Black_Mountain_Invoicing_Entity__c.field-meta.xml
<CustomField>
    <fullName>Black_Mountain_Invoicing_Entity__c</fullName>
    <label>Black Mountain Invoicing Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BM_Entity</valueSetName>
    </valueSet>
</CustomField>