force-app/main/default/objects/Account/fields/BM_System_Training_Date__c.field-meta.xml
<CustomField>
    <fullName>BM_System_Training_Date__c</fullName>
    <label>BM System Training Date</label>
    <type>Date</type>
</CustomField>