force-app/main/default/objects/Account/fields/BM_Systems_Training__c.field-meta.xml
<CustomField>
    <fullName>BM_Systems_Training__c</fullName>
    <label>BM Systems Training</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BM Technology partners</fullName>
            </value>
            <value>
                <fullName>Ippex</fullName>
            </value>
            <value>
                <fullName>Payzaar</fullName>
            </value>
            <value>
                <fullName>People HR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>