force-app/main/default/objects/Account/fields/BM_Systems_Training_Other__c.field-meta.xml
<CustomField>
    <fullName>BM_Systems_Training_Other__c</fullName>
    <label>BM Systems Training (Other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>