force-app/main/default/objects/Account/fields/Cadence_of_Service_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Cadence_of_Service_Reviews__c</fullName>
    <label>Cadence of Service Reviews</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
            </value>
            <value>
                <fullName>Adhoc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>