force-app/main/default/objects/Account/fields/Client_Retention_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Client_Retention_Strategy__c</fullName>
    <label>Client Retention Strategy</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>