force-app/main/default/objects/Account/fields/Client_Turnover_Annual__c.field-meta.xml
<CustomField>
    <fullName>Client_Turnover_Annual__c</fullName>
    <inlineHelpText>Annual turnover in the Client&apos;s base currency. Typically found in the Client&apos;s Annual return.</inlineHelpText>
    <label>Client Turnover (Annual)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>