force-app/main/default/objects/Account/fields/Code_of_Conduct__c.field-meta.xml
<CustomField>
    <fullName>Code_of_Conduct__c</fullName>
    <label>Code of Conduct</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Refused</fullName>
                <isActive>false</isActive>
                <label>Refused</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>