force-app/main/default/objects/Account/fields/Code_of_Conduct_Signed__c.field-meta.xml
<CustomField>
    <fullName>Code_of_Conduct_Signed__c</fullName>
    <label>Code of Conduct Signed</label>
    <type>Date</type>
</CustomField>