force-app/main/default/objects/Account/fields/Compliance_Comment__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Comment__c</fullName>
    <label>Compliance Comment</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>