force-app/main/default/objects/Account/fields/Compliance_Rejection_Reasons__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rejection_Reasons__c</fullName>
    <label>Compliance Rejection Reason(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Declined KYC Request</fullName>
            </value>
            <value>
                <fullName>Insufficient Documentation Provided</fullName>
            </value>
            <value>
                <fullName>Risk Assessed as Unacceptable</fullName>
            </value>
            <value>
                <fullName>Source Funds Unclear</fullName>
            </value>
            <value>
                <fullName>Suspicious or Fraudulent Information</fullName>
            </value>
            <value>
                <fullName>AML Breach</fullName>
            </value>
            <value>
                <fullName>Sanctions Breach</fullName>
            </value>
            <value>
                <fullName>PEP</fullName>
            </value>
            <value>
                <fullName>Adverse Media / PR</fullName>
            </value>
            <value>
                <fullName>Rejected for Another Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>