force-app/main/default/objects/Account/fields/CST_Team_Partner_Contact_Approved__c.field-meta.xml
<CustomField>
    <fullName>CST_Team_Partner_Contact_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CST Team Partner Contact Approved</label>
    <type>Checkbox</type>
</CustomField>