force-app/main/default/objects/Account/fields/Cybersecurity_Proof__c.field-meta.xml
<CustomField>
    <fullName>Cybersecurity_Proof__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cybersecurity Proof</label>
    <type>Checkbox</type>
</CustomField>