force-app/main/default/objects/Account/fields/Cybersecurity_Training__c.field-meta.xml
<CustomField>
    <fullName>Cybersecurity_Training__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cybersecurity Training</label>
    <type>Checkbox</type>
</CustomField>