force-app/main/default/objects/Account/fields/Date_of_Last_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Meeting__c</fullName>
    <formula>LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Last Activity Date</inlineHelpText>
    <label>Date of Last Meeting</label>
    <type>Date</type>
</CustomField>