force-app/main/default/objects/Account/fields/Date_of_Last_Service_Review_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Service_Review_with_Client__c</fullName>
    <label>Date of Last Service Review with Client</label>
    <type>Date</type>
</CustomField>