force-app/main/default/objects/Account/fields/Descendants_Sum__c.field-meta.xml
<CustomField>
    <fullName>Descendants_Sum__c</fullName>
    <label>Descendants Sum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>