force-app/main/default/objects/Account/fields/Direct_Children__c.field-meta.xml
<CustomField>
    <fullName>Direct_Children__c</fullName>
    <label>Direct Children</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>