force-app/main/default/objects/Account/fields/ESG_Approval__c.field-meta.xml
<CustomField>
    <fullName>ESG_Approval__c</fullName>
    <label>ESG Approval</label>
    <type>Date</type>
</CustomField>