force-app/main/default/objects/Account/fields/ESG_Expiry__c.field-meta.xml
<CustomField>
    <fullName>ESG_Expiry__c</fullName>
    <label>ESG Expiry</label>
    <type>Date</type>
</CustomField>