force-app/main/default/objects/Account/fields/Forecast_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Annual_Revenue__c</fullName>
    <inlineHelpText>Sum of recurring fees from Opportunities in which the current account serves as the Servicing Account, and the probability of success is greater than 70%.</inlineHelpText>
    <label>Forecast Annual Revenue</label>
    <summarizedField>Opportunity.ARR__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Probability</field>
        <operation>greaterOrEqual</operation>
        <value>70</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>