force-app/main/default/objects/Account/fields/Fundflow__c.field-meta.xml
<CustomField>
    <fullName>Fundflow__c</fullName>
    <label>Fundflow</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Fundflow</valueSetName>
    </valueSet>
</CustomField>