force-app/main/default/objects/Account/fields/Initial_Forecast_Annual_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Initial_Forecast_Annual_Revenue__c</fullName>
    <label>Initial Forecast Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>