force-app/main/default/objects/Account/fields/Insurance_Certifications__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Certifications__c</fullName>
    <label>Insurance Certifications</label>
    <length>255</length>
    <type>Text</type>
</CustomField>