force-app/main/default/objects/Account/fields/Is_Country_Sanctioned__c.field-meta.xml
<CustomField>
    <fullName>Is_Country_Sanctioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Country Sanctioned?</label>
    <type>Checkbox</type>
</CustomField>