force-app/main/default/objects/Account/fields/Is_Live__c.field-meta.xml
<CustomField>
    <fullName>Is_Live__c</fullName>
    <formula>ISPICKVAL(Status__c, &apos;Live&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Live?</label>
    <type>Checkbox</type>
</CustomField>