force-app/main/default/objects/Account/fields/Is_Partner_Used__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_Used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partner Used?</label>
    <type>Checkbox</type>
</CustomField>