force-app/main/default/objects/Account/fields/Last_Compliance_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Compliance_Review_Date__c</fullName>
    <inlineHelpText>Populated automatically, when Compliance Task is completed.</inlineHelpText>
    <label>Last Compliance Review Date</label>
    <type>Date</type>
</CustomField>