force-app/main/default/objects/Account/fields/Master_Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Master_Service_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Service Agreement</label>
    <type>Checkbox</type>
</CustomField>