force-app/main/default/objects/Account/fields/Master_Service_Agreement_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Master_Service_Agreement_Expiry__c</fullName>
    <label>Master Service Agreement Expiry</label>
    <type>Date</type>
</CustomField>