force-app/main/default/objects/Account/fields/Modern_Slavery_Approval__c.field-meta.xml
<CustomField>
    <fullName>Modern_Slavery_Approval__c</fullName>
    <label>Modern Slavery Approval</label>
    <type>Date</type>
</CustomField>