force-app/main/default/objects/Account/fields/Modern_Slavery_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Modern_Slavery_Expiry__c</fullName>
    <label>Modern Slavery Expiry</label>
    <type>Date</type>
</CustomField>