force-app/main/default/objects/Account/fields/Modern_Slavery_Risk_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Modern_Slavery_Risk_Assessment__c</fullName>
    <label>Modern Slavery Risk Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>