force-app/main/default/objects/Account/fields/Monday_com_Id__c.field-meta.xml
<CustomField>
    <fullName>Monday_com_Id__c</fullName>
    <externalId>true</externalId>
    <label>Monday.com Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>