force-app/main/default/objects/Account/fields/MSA_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>MSA_Payment_Term__c</fullName>
    <inlineHelpText>Number of days.</inlineHelpText>
    <label>MSA Payment Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>