force-app/main/default/objects/Account/fields/Nature_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Nature_of_Business__c</fullName>
    <label>Nature of Business</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>