force-app/main/default/objects/Account/fields/Next_Account_Plan_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Account_Plan_Review_Date__c</fullName>
    <formula>CASE( Cadence_of_Service_Reviews__c,
&quot;Monthly&quot;,  ADDMONTHS(Date_of_Last_Service_Review_with_Client__c ,1),
&quot;Quarterly&quot;, ADDMONTHS(Date_of_Last_Service_Review_with_Client__c ,3),
&quot;Semi-Annually&quot;, ADDMONTHS(Date_of_Last_Service_Review_with_Client__c ,6),
&quot;Annually&quot;, ADDMONTHS(Date_of_Last_Service_Review_with_Client__c ,12),
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Account Plan Review Date</label>
    <type>Date</type>
</CustomField>