force-app/main/default/objects/Account/fields/Next_Compliance_Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Compliance_Review_Date__c</fullName>
    <description>Populated automatically, when Compliance Review Date is changed according to formula: Compliance Review Date + 1 Year.</description>
    <label>Next Compliance Review Date</label>
    <type>Date</type>
</CustomField>