force-app/main/default/objects/Account/fields/Non_Disclosure_Agreement_NDA__c.field-meta.xml
<CustomField>
    <fullName>Non_Disclosure_Agreement_NDA__c</fullName>
    <label>Non Disclosure Agreement (NDA)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>