force-app/main/default/objects/Account/fields/Outstanding_Issues__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Issues__c</fullName>
    <label>Outstanding Issues</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>