force-app/main/default/objects/Account/fields/Partner_Signatory__c.field-meta.xml
<CustomField>
    <fullName>Partner_Signatory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Signatory</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Partner Signatory)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>