force-app/main/default/objects/Account/fields/Partner_Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Partner_Signatory_Email__c</fullName>
    <label>Partner Signatory Email</label>
    <type>Email</type>
</CustomField>