force-app/main/default/objects/Account/fields/Payroll_Software__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Software__c</fullName>
    <label>Payroll Software</label>
    <length>255</length>
    <type>Text</type>
</CustomField>