force-app/main/default/objects/Account/fields/Preferred_Partner__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Partner</label>
    <type>Checkbox</type>
</CustomField>