force-app/main/default/objects/Account/fields/Primary_Country__c.field-meta.xml
<CustomField>
    <fullName>Primary_Country__c</fullName>
    <label>Primary Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>