force-app/main/default/objects/Account/fields/Rating_Result_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Rating_Result_Weighted__c</fullName>
    <label>Rating Result Weighted</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>