force-app/main/default/objects/Account/fields/Reasons_for_Variance__c.field-meta.xml
<CustomField>
    <fullName>Reasons_for_Variance__c</fullName>
    <label>Reasons for Variance</label>
    <type>TextArea</type>
</CustomField>