force-app/main/default/objects/Account/fields/Recent_Key_Discussion_Points__c.field-meta.xml
<CustomField>
    <fullName>Recent_Key_Discussion_Points__c</fullName>
    <inlineHelpText>Summary of Last Service Review Key Discussion Points</inlineHelpText>
    <label>Recent Key Discussion Points</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>