force-app/main/default/objects/Account/fields/Recent_News_Developments__c.field-meta.xml
<CustomField>
    <fullName>Recent_News_Developments__c</fullName>
    <label>Recent News/Developments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>