force-app/main/default/objects/Account/fields/Recurring_Issues__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Issues__c</fullName>
    <label>Recurring Issues</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>