force-app/main/default/objects/Account/fields/Referral_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Referral_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referral Agreement</label>
    <type>Checkbox</type>
</CustomField>