force-app/main/default/objects/Account/fields/Referral_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Referral_Agreement_Date__c</fullName>
    <label>Referral Agreement Date</label>
    <type>Date</type>
</CustomField>