force-app/main/default/objects/Account/fields/Risk_Approval_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Approval_Expiry_Date__c</fullName>
    <label>Risk Approval Expiry Date</label>
    <type>Date</type>
</CustomField>