force-app/main/default/objects/Account/fields/Risk_Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Risk_Assessment_Date__c</fullName>
    <inlineHelpText>Populated automatically date when Risk Assessment is run.</inlineHelpText>
    <label>Risk Assessment Date</label>
    <type>Date</type>
</CustomField>