force-app/main/default/objects/Account/fields/Risk_Country_of_Funds_Formula__c.field-meta.xml
<CustomField>
    <fullName>Risk_Country_of_Funds_Formula__c</fullName>
    <formula>IF(ISBLANK(Score_Country_of_Funds__c), &quot;&quot;, 
    IF(Score_Country_of_Funds__c &gt;= 4, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;high&quot;) + &quot; High&quot;,
        IF(Score_Country_of_Funds__c &gt; 2, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;medium&quot;) + &quot; Medium&quot;, 
            IF(Score_Country_of_Funds__c &gt;= 0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;low&quot;) + &quot; Low&quot;, &quot;&quot;)
        )
    )
)</formula>
    <label>Risk - Country of Funds</label>
    <type>Text</type>
</CustomField>