force-app/main/default/objects/Account/fields/Risk_Primary_Source_of_Wealth_Formula__c.field-meta.xml
<CustomField>
    <fullName>Risk_Primary_Source_of_Wealth_Formula__c</fullName>
    <formula>IF(ISBLANK(Score_Primary_Source_of_Wealth__c ), &quot;&quot;,
IF(Score_Primary_Source_of_Wealth__c &gt;= 4, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;high&quot;) + &quot; High&quot;,
IF(Score_Primary_Source_of_Wealth__c &gt; 2, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;medium&quot;) + &quot; Medium&quot;,
IF(Score_Primary_Source_of_Wealth__c &gt;= 0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;low&quot;) + &quot; Low&quot;, &quot;&quot;)
)
)
)</formula>
    <label>Risk - Primary Source of Wealth</label>
    <type>Text</type>
</CustomField>