force-app/main/default/objects/Account/fields/Risk_Score_Weighted__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score_Weighted__c</fullName>
    <label>Risk Score Weighted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>