force-app/main/default/objects/Account/fields/Risk_Transaction_Formula__c.field-meta.xml
<CustomField>
    <fullName>Risk_Transaction_Formula__c</fullName>
    <formula>IF(ISBLANK(Score_Transaction__c), &quot;&quot;,
IF(Score_Transaction__c&gt;= 4, IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;high&quot;) + &quot; High&quot;,
IF(Score_Transaction__c&gt; 2, IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;medium&quot;) + &quot; Medium&quot;,
IF(Score_Transaction__c&gt;= 0, IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;low&quot;) + &quot; Low&quot;, &quot;&quot;)
)
)
)</formula>
    <label>Risk - Transaction</label>
    <type>Text</type>
</CustomField>