force-app/main/default/objects/Account/fields/Score_Country_of_Funds__c.field-meta.xml
<CustomField>
    <fullName>Score_Country_of_Funds__c</fullName>
    <label>Score - Country of Funds</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>